# book-tracker-rs

./: .env.example  Cargo.toml  README.md  books.db  books.db-shm  books.db-wal  build.rs
src/: cors.rs  main.rs
src/db/: mod.rs
src/db/migrations/: 0001_create_books_tables.sql
src/models/: book.rs  mod.rs
src/openlibrary/: mod.rs
