[package]
name = "book-tracker-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
async-graphql = { version = "3.0.19", features = ["chrono"] }
async-graphql-rocket = "3.0.19"
chrono = "0.4.19"
color-backtrace = "0.5.1"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
reqwest = { version = "0.11.8", features = ["json"] }
rocket = "0.5.0-rc.1"
serde = "1.0.133"
sqlx = { version = "0.5.10", features = [ "runtime-tokio-native-tls", "sqlite", "migrate", "chrono" ] }